--- a/configurableMenu@lestcape/locale/en.po
+++ b/configurableMenu@lestcape/locale/en.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-02-22 12:40-0600\n"
+"PO-Revision-Date: 2014-02-25 21:42-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -31,20 +31,20 @@ msgid "Show application entries in list view"
 msgstr "Show application entries in list view"
 
 #: applet.js:1459
-msgid "Prevent resize"
-msgstr "Prevent resize"
+msgid "Prevent resizing"
+msgstr "Prevent resizing"
 
 #: applet.js:1459
-msgid "Prevent resize the menu"
-msgstr "Prevent resize the menu"
+msgid "Prevent resizing the menu"
+msgstr "Prevent resizing the menu"
 
 #: applet.js:1461
-msgid "Allow resize"
-msgstr "Allow resize"
+msgid "Allow resizing"
+msgstr "Allow resizing"
 
 #: applet.js:1461
-msgid "Allow resize the menu"
-msgstr "Allow resize the menu"
+msgid "Allow resizing the menu"
+msgstr "Allow resizing the menu"
 
 #: applet.js:1465
 msgid "Recover size"
@@ -606,6 +606,10 @@ msgstr "Choose whether or not to show time and date on the menu."
 #. size->description
 msgid "Automatic size"
 msgstr "Automatic size"
+
+#. configurableMenu@lestcape->settings-schema.json->allow-resizing->tooltip
+msgid "Choose whether or not to allow resizing the menu."
+msgstr "Choose whether or not to allow resizing the menu."
 
 #. configurableMenu@lestcape->settings-schema.json->automatic-size->tooltip
 msgid "Choose whether or not to automatic adjust of the menu size."
