--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-02-22 12:45-0600\n"
+"PO-Revision-Date: 2014-02-25 21:42-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -31,19 +31,19 @@ msgid "Show application entries in list view"
 msgstr "Mostrar las entradas de applicación en vista de lista"
 
 #: applet.js:1459
-msgid "Prevent resize"
+msgid "Prevent resizing"
 msgstr "Prevenir el cambio de tamaño"
 
 #: applet.js:1459
-msgid "Prevent resize the menu"
+msgid "Prevent resizing the menu"
 msgstr "Prevenir el cambio de tamaño del menú"
 
 #: applet.js:1461
-msgid "Allow resize"
+msgid "Allow resizing"
 msgstr "Permitir el cambio de tamaño"
 
 #: applet.js:1461
-msgid "Allow resize the menu"
+msgid "Allow resizing the menu"
 msgstr "Permitir el cambio de tamaño del menú"
 
 #: applet.js:1465
@@ -620,6 +620,10 @@ msgstr "Seleccione si desea o no mostrar la fecha y hora en el menú."
 #. size->description
 msgid "Automatic size"
 msgstr "Tamaño automático"
+
+#. configurableMenu@lestcape->settings-schema.json->allow-resizing->tooltip
+msgid "Choose whether or not to allow resizing the menu."
+msgstr "Elija si desea o no permitir el cambio de tamaño del menú."
 
 #. configurableMenu@lestcape->settings-schema.json->automatic-size->tooltip
 msgid "Choose whether or not to automatic adjust of the menu size."
