Update translation and description.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
 Cinnamon Applet: Configurable Menu Version: v0.9-Beta
 
-Last version release date: 21 january 2014
+Last version release date: 07 March 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 
@@ -37,27 +37,34 @@ Here you can find interesting information about Configurable Menu.
    - Settings                : https://github.com/lestcape/Configurable-Menu/wiki/Settings
    - Cinnamon themes support : https://github.com/lestcape/Configurable-Menu/wiki/Theme-Support
    - New languages           : https://github.com/lestcape/Configurable-Menu/wiki/Add-new-languages
+   - Install nightly build   : https://github.com/lestcape/Configurable-Menu/wiki/Install-Nightly-Build
 
 Change log
 --------------
 See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/Change-Log.
 
 0.9-Beta
+   - Improved the menu speed.
+   - Added web search.
    - Was added support for more languages.
    - Was added spanish language.
    - Now you can have a different configuration for each layout.
    - The removable drives are now show in accessible panel and also can be removed.
+   - Context menu now have the most uses option and can show also if you have the menu open.
    - The full screen mode was improved, now can be see better in more themes.
    - Now the property "Maximum width of the application entry text" it's really a maximum width and not the width.
    - Added support for the old Clutter.Color API to fix the bug "Clutter.Color.from_string is not a function" when you start the applet.
    - Fixed the bug on mint and windows 7 layouts. This error involves the closure of the menu in the case of the searchEntry do not has a focus.
    - The Menu now can be improved using the css file of any Cinnamon theme.
    - Removed the hover icon borders, due to allow more compatibility with cinnamon themes.
-   - The new layouts of Vampire, Garibaldo, GnoMenu Left, GnoMenu Right GnoMenu Top and GnoMenu Bottom was added.
+   - The new layouts of Vampire, Garibaldo, GnoMenu Left, GnoMenu Right, GnoMenu Top, GnoMenu Bottom and Gnome Classic was added.
    - Several visually improvement in different layouts, especially the horizontal.
    - Now you can rename the apps on the accessible panel.
    - Changed the control buttons icons and was added the option to be symbolic or full color.
-   - You can swap top and bottom menu panels.
+   - You can swap top and bottom menu panels(also the box inside the the panels was swapped).
+   - Control and system buttons now can be symbolic or full color.
+   - Allow to remove the search entry.
+   - Allow to have arrow on the categories.
 
 This program is free software:
 --------------
