--- a/configurableMenu@lestcape/locale/default.po
+++ b/configurableMenu@lestcape/locale/default.po
@@ -255,6 +255,14 @@ msgstr ""
 msgid "GnoMenu Panel:"
 msgstr ""
 
+#. configurableMenu@lestcape->settings-schema.json->header-submenu->description
+msgid "Submenu:"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->header-search->description
+msgid "General search options:"
+msgstr ""
+
 #. configurableMenu@lestcape->settings-schema.json->swap-panels->description
 msgid "Swap the top and bottom panel"
 msgstr ""
@@ -399,15 +407,6 @@ msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->activate-on-press->tooltip
 msgid "Enable opening the menu when the mouse press over the applet."
-msgstr ""
-
-#. configurableMenu@lestcape->settings-schema.json->search-
-#. filesystem->description
-msgid "Enable filesystem path entry in search box"
-msgstr ""
-
-#. configurableMenu@lestcape->settings-schema.json->search-filesystem->tooltip
-msgid "Allows path entry in the menu search box."
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->height->description
@@ -774,6 +773,30 @@ msgstr ""
 msgid "Set the GnoMenu icons size."
 msgstr ""
 
+#. configurableMenu@lestcape->settings-schema.json->submenu-align->description
+msgid "Align the submenu with the parent"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->submenu-align->tooltip
+msgid "Choose whether or not to align the submenu with the parent."
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->submenu-width->description
+msgid "Submenu width:"
+msgstr "Submenu width:"
+
+#. configurableMenu@lestcape->settings-schema.json->submenu-width->tooltip
+msgid "Set the submenu width."
+msgstr "Set the submenu width."
+
+#. configurableMenu@lestcape->settings-schema.json->submenu-height->description
+msgid "Submenu height:"
+msgstr "Submenu height:"
+
+#. configurableMenu@lestcape->settings-schema.json->submenu-height->tooltip
+msgid "Set the submenu height."
+msgstr "Set the submenu height."
+
 #. configurableMenu@lestcape->settings-schema.json->icon-accesible-size->units
 msgid "pixels"
 msgstr ""
@@ -1001,3 +1024,45 @@ msgstr ""
 #. configurableMenu@lestcape->settings-schema.json->power-symbolic->tooltip
 msgid "Enable this option to show symbolic icons, on the system buttons and disable to show full color."
 msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->search-
+#. filesystem->description
+msgid "Enable filesystem path entry in search box"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->search-filesystem->tooltip
+msgid "Allows path entry in the menu search box."
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->search-web->description
+msgid "Enable web search"
+msgstr "Enable web search"
+
+#. configurableMenu@lestcape->settings-schema.json->search-web->tooltip
+msgid "Allows the web search with the selected search engines."
+msgstr "Allows the web search with the selected search engines."
+
+#. configurableMenu@lestcape->settings-schema.json->search-wikipedia->description
+msgid "Enable web search with wikipedia"
+msgstr "Enable web search with wikipedia"
+
+#. configurableMenu@lestcape->settings-schema.json->search-wikipedia->tooltip
+msgid "Allows web search to the wikipedia search engine."
+msgstr "Allows web search to the wikipedia search engine."
+
+#. configurableMenu@lestcape->settings-schema.json->"search-google->description
+msgid "Enable web search with"
+msgstr "Enable web search with"
+
+#. configurableMenu@lestcape->settings-schema.json->search-google->tooltip
+msgid "Allows web search to the google search engine."
+msgstr "Allows web search to the google search engine."
+
+#. configurableMenu@lestcape->settings-schema.json->"search-duckduckgo->description
+msgid "Enable web search with duckduckgo"
+msgstr "Enable web search with duckduckgo"
+
+#. configurableMenu@lestcape->settings-schema.json->search-duckduckgo->tooltip
+msgid "Allows web search to the duckduckgo search engine."
+msgstr "Allows web search to the duckduckgo search engine."
+
